# embassy-watchdog-test

./: Cargo.toml  LICENSE  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
