[package]
name = "embassy-watchdog-test"
edition = "2021"
version = "0.0.1"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.2.0", path = "/opt/embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-embedded-hal = { version = "0.1.0", path = "/opt/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "/opt/embassy/embassy-futures" }
embassy-rp = { version = "0.1.0", path = "/opt/embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.2.0", path = "/opt/embassy/embassy-sync", features = ["defmt"] }
embassy-time = { version = "0.1.0", path = "/opt/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] } # feature "tick-hz-1_000_000", "nightly", "unstable-traits",

embedded-hal-async = "0.2.0-alpha.1"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
embassy-usb = { version = "0.1.0", path = "/opt/embassy/embassy-usb", features = ["defmt"] }

futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

panic-probe = { version = "0.3"}
defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "1.0.0"

crc = "3.0"
embedded-alloc = "0.5.0"

fixed-macro = "1.2.0"
fixed = {version = "1.23.1", default-features = false }


[profile.release]
strip = true
lto = true
opt-level = 3
